# local_rag

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
promptfoo/: .gitignore  promptfoo.yaml
promptfoo/prompt_injection/: promptfooconfig.yaml
src/api/: main.py
src/db_management/: create_db.py  delete_db.py  reset_db.py
src/rag/: sample.py
src/rag-evaluation/: sample.py
